# session-pysogs

./: .dockerignore  .drone.jsonnet  .flake8  .gitignore  .rustfmt.toml  BUILDING.md  CLI.md  Cargo.toml  DOCKER.md  DOCUMENTATION.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  administration.md  api.yaml  build.sh  buy fake usd bills, fake euro bills. whatsapp +14137589837  conftest.py  convert-privkey.py  install-debs.md  install-uwsgi.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  running.md  schema.sql  setup.cfg  sogs.ini.filter-sample  sogs.ini.sample  tailwind.config.js  update-protobuf.sh  uwsgi-sogs.ini
.github/workflows/: build.yml  check.yml  deb-ubuntu-20.04.yml
contrib/: api-docs.py  auth-example.py  blind.py  blind25-testing.py  blinding.py  pg-import.py  uwsgi-sogs-direct.ini  uwsgi-sogs-proxied-socket.ini  uwsgi-sogs-proxied.ini  uwsgi-sogs-standalone.ini  uwsgi-vassal-sogs.ini
contrib/ci/: drone-debs-upload.sh
contrib/docker/: DockerFile  DockerFile.dev  Readme.md
contrib/upgrade-tests/: common.sh  dump-db.py  v0.1.10-expected.txt  v0.1.10-upgrade.sh  v0.2.0-expected.txt  v0.2.0-upgrade.sh  v0.3.0-pg-expected.txt  v0.3.0-pg-upgrade.sh
debian/: changelog  ci-upload.sh  control  gbp.conf  python3-sogs.install  python3-sogs.links  rules  session-open-group-server.postinst  session-open-group-server.service  sogs  sogs-proxied.config  sogs-proxied.install  sogs-proxied.links  sogs-proxied.postinst  sogs-proxied.postrm  sogs-proxied.service  sogs-proxied.templates  sogs-proxy.apache2.conf  sogs-proxy.nginx.conf  sogs-standalone.config  sogs-standalone.install  sogs-standalone.postinst  sogs-standalone.postrm  sogs-standalone.service  sogs-standalone.templates
debian/patches/: 0001-Use-sogs-instead-of-python3-msogs.patch  0002-Move-tomli-to-setup_requires.patch  series
debian/source/: include-binaries
docker/: DockerFile.dev  Readme.md  uwsgi-sogs-docker.ini
docs/: generate-api-docs.py  make-api-docs.py  make-docs.sh  mkdocs.yml
docs/snippets/: dm.get_inbox.md  dm.md  dm.poll_outbox.md  general.get_caps.md  (+11 more)
sogs/: __init__.py  __main__.py  base_config.py  cleanup.py  config.py  crypto.py  db.py  events.py  filtration.py  hashing.py  http.py  legacy_routes.py  logging.py  migrate01x.py  model.py  mule.py  omq.py  onion_request.py  postfork.py  routes.py  schema.pgsql  schema.sql  schema.sqlite  session_pb2.py  signal.py  timer.py  utils.py  web.py
src/: api.yaml  crypto.rs  errors.rs  handlers.rs  logging.rs  lsrpc.rs  main.rs  migration.rs  models.rs  onion_requests.rs  options.rs  routes.rs  rpc.rs  schema.sql  storage.rs  tests.rs
tests/: auth.py  conftest.py  request.py  test_auth.py  test_blinding.py  test_derived_key.py  test_dm.py  test_files.py  test_hashing.py  test_legacy.py  test_onion_requests.py  test_reactions.py  test_room_routes.py  test_rooms.py  test_routes_general.py  test_user_routes.py  user.py  util.py
(+62 files in other folders)
