[package]
name = "session-open-group-server"
version = "1.0.0"
authors = ["Niels Andriesse <niels@oxen.io>"]
edition = "2018"

[dependencies]
aes-gcm = "0.8.0"
hex = "0.4.3"
lazy_static = "1.4.0"
pem = "0.8.3"
regex = "1.4"
rusqlite = "0.24"
r2d2_sqlite = "0.17.0"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
x25519-dalek = "1.1.0"
