[package]
name = "session-open-group-server"
version = "1.0.0"
authors = ["Niels Andriesse <niels@oxen.io>"]
edition = "2018"

[dependencies]
aes-gcm = "0.8"
base64 = "0.13"
curve25519-parser = "0.2"
hex = "0.4"
hmac = "0.10"
http = "0.2"
lazy_static = "1.4"
rand = "0.8"
rusqlite = { version = "0.24", features = ["bundled"] }
r2d2_sqlite = "0.17"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tokio = { version = "1.3", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
x25519-dalek = "1.1"
