[package]
name = "session-open-group-server"
version = "0.1.10"
authors = ["The Oxen Project <team@oxen.io>"]
edition = "2018"
description = "The Session open group server. Use this to run a custom open group."
license = "MIT"

[package.metadata.deb]
systemd-units = { enable = true, start = true }
maintainer-scripts = "debian/"
depends = "libssl1.1, openssl"
section = "net"

[dependencies]
aes-gcm = "0.8"
base64 = "0.13"
chrono = "0.4"
curve25519-parser = "0.2"
futures = "0.3"
hex = "0.4"
hmac = "0.10"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.0"
octocrab = "0.9"
rand = "0.8"
rand_core = "0.5"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "^0.25", features = ["bundled"] }
rusqlite_migration = "0.4"
r2d2_sqlite = "^0.18"
r2d2 = "^0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
structopt = "0.3"
tokio = { version = "^1.3", features = ["full"] }
url = "2.2.1"
warp = { version = "0.3", features = ["tls"] }
x25519-dalek = "1.1"
parking_lot = "0.11.1"

[dev-dependencies]
tokio-test = "*"
