[metadata]

name = sogs
version = attr: sogs.__version__

[options]

zip_safe=False
include_package_data=True
packages=find:
install_requires=
    flask
    coloredlogs
    cryptography
    PyNaCl
    Pillow
    protobuf
    pyOpenSSL
    qrcode
    better_profanity
    oxenmq
    oxenc
    pyonionreq
    sqlalchemy
setup_requires=
    tomli
